Logo fix on mobile

--- a/SpoofyFrontend/src/index.css
+++ b/SpoofyFrontend/src/index.css
@@ -17,11 +17,12 @@ header {
 }
 
 .logo {
-    max-width:800px;
+    max-width:calc(min(800px, 100%));
     max-height:30vh;
     width: auto;
     height:auto;
     filter: drop-shadow(0 0 0.4rem cyan);
+    margin-bottom:1rem;
 }
 
 .large-text .card-text {
